--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "dev": "openmrs develop --backend=https://staging.ampath.or.ke --api-url=/openmrs --config-url=https://ngx.ampath.or.ke/o3-config.json --sources=packages/esm-patient-registration-app --port=9000",
     "ci:publish": "yarn workspaces foreach --all --topological --exclude @openmrs/esm-patient-management npm publish --access public --tag latest",
     "ci:prepublish": "yarn workspaces foreach --all --topological --exclude @openmrs/esm-patient-management npm publish --access public --tag next",
+    "ampath:publish": "yarn workspace @ampath/esm-patient-registration-app npm publish --access public --tag latest",
+    "ampath:prepublish": "yarn workspace @ampath/esm-patient-registration-app npm publish --access public --tag next",
+    "ampath:build": "yarn workspace @ampath/esm-patient-registration-app build",
+    "ampath:test": "yarn workspace @ampath/esm-patient-registration-app test",
+    "ampath:dev": "openmrs develop --backend=https://staging.ampath.or.ke --api-url=/openmrs --config-url=https://ngx.ampath.or.ke/o3-config.json --sources=packages/esm-patient-registration-app --port=9000",
     "release": "yarn workspaces foreach --all --topological version",
     "verify": "turbo run lint typescript test --concurrency=1",
     "test-e2e": "playwright test",
