--- a/.github/workflows/publish-ampath.yml
+++ b/.github/workflows/publish-ampath.yml
@@ -16,64 +16,36 @@ jobs:
   build:
     runs-on: ubuntu-latest
     timeout-minutes: 15
-    outputs:
-      should-publish: ${{ steps.check-changes.outputs.should-publish }}
 
     steps:
       - name: 📥 Checkout repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
-      - name: 🔍 Check for relevant changes
-        id: check-changes
-        run: |
-          if [[ "${{ github.event_name }}" == "release" ]]; then
-            echo "should-publish=true" >> $GITHUB_OUTPUT
-            echo "Release event - will publish"
-          else
-            # Check if there are changes in the patient registration app
-            if git diff --name-only HEAD~1 HEAD | grep -E "^packages/esm-patient-registration-app/"; then
-              echo "should-publish=true" >> $GITHUB_OUTPUT
-              echo "Changes detected in patient registration app - will publish"
-            else
-              echo "should-publish=false" >> $GITHUB_OUTPUT
-              echo "No changes in patient registration app - skipping publish"
-            fi
-          fi
-
-      - name: 🛠️ Setup Node.js
-        if: steps.check-changes.outputs.should-publish == 'true'
+      - name: ️ Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
           cache: 'yarn'
 
       - name: 📦 Install dependencies
-        if: steps.check-changes.outputs.should-publish == 'true'
         run: yarn install --immutable
 
       - name: 🚀 Setup local cache server for Turborepo
-        if: steps.check-changes.outputs.should-publish == 'true'
         uses: felixmosh/turborepo-gh-artifacts@v3
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           server-token: ${{ env.TURBO_TOKEN }}
 
       - name: 🧪 Run tests for patient registration app
-        if: steps.check-changes.outputs.should-publish == 'true'
         run: yarn workspace @ampath/esm-patient-registration-app test
 
       - name: 🔧 Run type checks
-        if: steps.check-changes.outputs.should-publish == 'true'
         run: yarn workspace @ampath/esm-patient-registration-app typescript
 
       - name: 🏗️ Build patient registration app
-        if: steps.check-changes.outputs.should-publish == 'true'
         run: yarn workspace @ampath/esm-patient-registration-app build
 
       - name: 📤 Upload build artifacts
-        if: steps.check-changes.outputs.should-publish == 'true'
         uses: actions/upload-artifact@v4
         with:
           name: patient-registration-dist
@@ -84,7 +56,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     if: >
-      needs.build.outputs.should-publish == 'true' && 
       github.event_name == 'push' && 
       github.ref == 'refs/heads/main' &&
       github.repository_owner == 'AMPATH'
@@ -130,7 +101,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     if: >
-      needs.build.outputs.should-publish == 'true' && 
       github.event_name == 'release' &&
       github.repository_owner == 'AMPATH'
 
