--- a/.github/workflows/publish-ampath.yml
+++ b/.github/workflows/publish-ampath.yml
@@ -37,13 +37,13 @@ jobs:
           server-token: ${{ env.TURBO_TOKEN }}
 
       - name: 🧪 Run tests for patient registration app
-        run: yarn workspace @ampath/esm-patient-registration-app test
+        run: yarn ampath:test
 
       - name: 🔧 Run type checks
         run: yarn workspace @ampath/esm-patient-registration-app typescript
 
       - name: 🏗️ Build patient registration app
-        run: yarn workspace @ampath/esm-patient-registration-app build
+        run: yarn ampath:build
 
       - name: 📤 Upload build artifacts
         uses: actions/upload-artifact@v4
@@ -88,7 +88,7 @@ jobs:
           echo "Publishing version: $NEXT_VERSION"
 
       - name: 🏗️ Build
-        run: yarn workspace @ampath/esm-patient-registration-app build
+        run: yarn ampath:build
 
       - name: 🚀 Publish to npm with next tag
         run: |
@@ -126,7 +126,7 @@ jobs:
           echo "Publishing release version: $RELEASE_VERSION"
 
       - name: 🏗️ Build
-        run: yarn workspace @ampath/esm-patient-registration-app build
+        run: yarn ampath:build
 
       - name: 🚀 Publish to npm with latest tag
         run: |
