--- a/.github/workflows/publish-ampath.yml
+++ b/.github/workflows/publish-ampath.yml
@@ -84,7 +84,7 @@ jobs:
           cd packages/esm-patient-registration-app
           CURRENT_VERSION=$(node -e "console.log(require('./package.json').version)")
           NEXT_VERSION="${CURRENT_VERSION}-next.${GITHUB_RUN_NUMBER}"
-          npm version $NEXT_VERSION --no-git-tag-version
+          npm version $NEXT_VERSION --no-git-tag-version --legacy-peer-deps
           echo "Publishing version: $NEXT_VERSION"
 
       - name: 🏗️ Build
@@ -122,7 +122,7 @@ jobs:
         run: |
           cd packages/esm-patient-registration-app
           RELEASE_VERSION=${GITHUB_REF_NAME#v}  # Remove 'v' prefix if present
-          npm version $RELEASE_VERSION --no-git-tag-version
+          npm version $RELEASE_VERSION --no-git-tag-version --legacy-peer-deps
           echo "Publishing release version: $RELEASE_VERSION"
 
       - name: 🏗️ Build
