--- a/.github/workflows/publish-ampath.yml
+++ b/.github/workflows/publish-ampath.yml
@@ -21,11 +21,10 @@ jobs:
       - name: 📥 Checkout repository
         uses: actions/checkout@v4
 
-      - name: ️ Setup Node.js
+      - name: 🛠️ Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-          cache: 'yarn'
 
       - name: 📦 Install dependencies
         run: yarn install
@@ -68,7 +67,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-          cache: 'yarn'
           registry-url: 'https://registry.npmjs.org'
 
       - name: 📦 Install dependencies
@@ -112,7 +110,6 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-          cache: 'yarn'
           registry-url: 'https://registry.npmjs.org'
 
       - name: 📦 Install dependencies
