--- a/.github/workflows/publish-ampath.yml
+++ b/.github/workflows/publish-ampath.yml
@@ -83,10 +83,11 @@ jobs:
           CURRENT_VERSION=$(node -e "console.log(require('./package.json').version)")
           NEXT_VERSION="${CURRENT_VERSION}-next.${GITHUB_RUN_NUMBER}"
           npm version $NEXT_VERSION --no-git-tag-version --legacy-peer-deps
+          rm -f package-lock.json node_modules -rf
           echo "Publishing version: $NEXT_VERSION"
 
       - name: 🔄 Restore yarn workspace
-        run: yarn install
+        run: yarn install --no-immutable
 
       - name: 🏗️ Build
         run: |
@@ -125,10 +126,11 @@ jobs:
           cd packages/esm-patient-registration-app
           RELEASE_VERSION=${GITHUB_REF_NAME#v}  # Remove 'v' prefix if present
           npm version $RELEASE_VERSION --no-git-tag-version --legacy-peer-deps
+          rm -f package-lock.json node_modules -rf
           echo "Publishing release version: $RELEASE_VERSION"
 
       - name: 🔄 Restore yarn workspace
-        run: yarn install
+        run: yarn install --no-immutable
 
       - name: 🏗️ Build
         run: |
